--- a/content/static/styles/events/list.css
+++ b/content/static/styles/events/list.css
@@ -167,6 +167,8 @@
 	height: 100%;
 	display: inline-block;
 
+	background-size: cover;
+	background-position: center center;
 	background-color: #cbcfd1;
 }
 
